--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^3.3.4"
+    "@astrojs/preact": "^3.0.1",
+    "@astrojs/rss": "^3.0.0",
+    "astro": "^2.10.15",
+    "preact": "^10.18.1"
   }
 }
