--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/preact": "^3.0.1",
     "@astrojs/rss": "^3.0.0",
     "astro": "^3.4.0",
-    "preact": "^10.18.1"
+    "preact": "^10.18.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
